--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Starter</title>
+    <title>Menu</title>
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -13,7 +13,20 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>menu project</h1>
+    <section class="menu">
+      <!-- title -->
+      <div class="title">
+        <h2>our menu</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- filter buttons -->
+      <div class="btn-container">
+      </div>
+      <!-- menu items -->
+      <div class="section-center">
+
+      </div>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
